@@ -1,4 +1,4 @@
-$Id: History,v 1.9 2000-06-15 17:38:13 gcosmo Exp $
+$Id: History,v 1.10 2000-08-03 09:05:10 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,11 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+Aug 03, 2000 G. Cosmo - param-V02-00-00r
+- Changed RandGauss to G4RandGauss in G4IrregularXrayTRmodel.cc and
+  G4VXrayTRmodel.cc to fix events' reproducibility problem.
+- G4VXrayTRmodel.cc: fix to class destructor (V.Grichine)
 
 Jun 15, 2000 G. Cosmo - param-V01-01-04
 - The tag coworks with global-V01-01-04 and materials-V01-01-00:
